# livraria-curso-django

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livros.py  0004_rename_livros_livro.py  0005_alter_livro_editora.py  0006_livro_autores.py  0007_compra.py  0008_itenscompra.py
livraria/: settings.py  urls.py
static/: staticfiles.json
