[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Lucas Vieira <lucasdavid.xavier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
